--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+server.port=8080
+
+spring.datasource.url = jdbc:mysql://localhost:3306/art?serverTimezone=UTC
+spring.datasource.username = Kostik
+spring.datasource.password = Hfyljv333
 
